src/responsive.css
/* Screen width <= 768 */
@media screen and (width <= 768px) {
    /* Font size */
    .fs-6_L_768{
        font-size: var(--font_2)
    }

    /* Width */
    .w-auto_L_768{
        width: auto;
    }
    .w-2_L_768{
        width: 2rem;
    }
    .aspect-ration-equal_L_768{
        aspect-ratio: 1/1;
    }
    .w-child-min-18rem_L_768 > *{
        min-width: 18rem;
    }

    /* Height */
    .h-min-0_L_768{
        min-height: 0;
    }
    .h-min-450_L_768{
        min-height: 450px;
    }
    .h-auto_L_768{
        height: auto;
    }

    /* display */
    .d-none_L_768{
        display: none;
    }
    .flex-col_L_768{
        flex-direction: column;
    }
    .gap-05_L_768{
        gap: .5rem;
    }

    /* Margin */
    .mtb-0_L_768{
        margin-top: 0;
        margin-bottom: 0;
    }
    .mtb-2_L_768{
        margin-top: 2rem;
        margin-bottom: 2rem;
    }
    .mb-2_L_768{
        margin-bottom: 2rem;
    }

    /* Padding */
    .p-05_L_768{
        padding-top: .25rem;
        padding-bottom: .25rem;
        padding-left: .25rem;
        padding-right: .25rem;
    }
    .ptb-05_L_768{
        padding-top: .5rem;
        padding-bottom: .5rem;
    }

    /* Position */
    .static_L_768{
        position: static;
    }

    /* Background */
    #OptionList > li{
        display: flex;
        align-items: center;
    }
    #OptionList > li:active{
        background-color: inherit;
    }
    #OptionList > li:not(:last-child){
        border-bottom: .01rem solid var(--lightgrey);
    }
    #OptionList > li::before{
        content: "";
        width: .5rem;
        height: .5rem;
        border: .25rem solid var(--background);
        border-radius: 100%;
        background-color: var(--background);
        outline: .1rem inset var(--lightgrey);
        margin-right: .25rem;
    }
    #OptionList > li[aria-selected=true]::before{
        border-color: var(--green);
        outline-color: var(--green);
        outline-style: outset;
    }
    .bg-tile-blue-tr_L_768{
        background-color: var(--black-pearl);
    }
    .blur-10_L_768{
        backdrop-filter: blur(10px);
    }
    #OptionList > li[aria-selected=true]{
        backdrop-filter: blur(50px);
    }
}

/* Screen width <= 500 */
@media screen and (width <= 500px){
    /* Font size */
    .fs-5_5_L_500{
        font-size: var(--font_175);
    }

    /* Display */
    .gap-1_L_500{
        gap: 1rem;
    }

    /* Padding */
    .plr-15_L_500{
        padding-left: 1.5rem;
        padding-right: 1.5rem;
    }
}

/* Screem width <= 425 */
@media screen and (width <= 425px) {
    /* Width */
    .w-100_L_425{
        width: 100%;
    }
}

